syntax = "proto3";

package calculator;

option go_package = "proto/calc";

service Calculator {
  rpc GetTask (Empty) returns (Task) {}
  rpc SendResult (Result) returns (Empty) {}
}

message Empty {}

message Task {
  string id = 1;
  float arg1 = 2;
  float arg2 = 3;
  string operation = 4;
  int32 operation_time = 5;
}

message Result {
  string task_id = 1;
  float result = 2;
  string error = 3;
}